# ChangeLog for sys-devel/autoconf
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/autoconf/ChangeLog,v 1.79 2006/09/08 05:02:00 vapier Exp $

  08 Sep 2006; Mike Frysinger <vapier@gentoo.org> autoconf-2.60.ebuild:
  Dont require help2man #146621 by Emanuel.

  28 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  +files/autoconf-2.60-tests.patch, autoconf-2.60.ebuild:
  Grab fix from upstream for tests with newer m4 #145279 by Josef Reidinger.

*autoconf-2.60 (27 Jun 2006)

  27 Jun 2006; Mike Frysinger <vapier@gentoo.org> +autoconf-2.60.ebuild:
  Version bump.

*autoconf-2.59d (25 Jun 2006)

  25 Jun 2006; Mike Frysinger <vapier@gentoo.org> +autoconf-2.59d.ebuild:
  Version bump for coreutils-5.97d.

  29 Apr 2006; Joshua Kinard <kumba@gentoo.org> ChangeLog:
  Marked stable on mips.

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> autoconf-2.13.ebuild,
  autoconf-2.59-r7.ebuild:
  Add ~x86-fbsd keywords.

  10 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org>
  autoconf-2.59-r7.ebuild:
  Stable on alpha wrt bug #125423

  10 Mar 2006; Torsten Veller <tove@gentoo.org> autoconf-2.59-r7.ebuild:
  Stable on x86 (#125423)

  10 Mar 2006; <nixnut@gentoo.org> autoconf-2.59-r7.ebuild:
  Stable on ppc. Bug #125423

  09 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  autoconf-2.59-r7.ebuild:
  Stable on sparc wrt #125423

  09 Mar 2006; Luis Medinas <metalgod@gentoo.org> autoconf-2.59-r7.ebuild:
  Stable on amd64. Bug #125423.

  08 Mar 2006; Markus Rothe <corsair@gentoo.org> autoconf-2.59-r7.ebuild:
  Stable on ppc64; bug #125423

*autoconf-2.59-r7 (23 Jun 2005)

  23 Jun 2005; Mike Frysinger <vapier@gentoo.org>
  +files/autoconf-2.59-more-quotes.patch, +autoconf-2.59-r7.ebuild:
  Fix under quoting of the $ac_unique_file variable by Justace Clutter #96882.

  15 Feb 2005; Kito <kito@gentoo.org> autoconf-2.13.ebuild,
  autoconf-2.59-r6.ebuild:
  ~ppc-macos keyword
