@@ -17,22 +17,22 @@ SHA256 96a54f7623bd889f3f8a12c802305a8e07a0dc781796ab78c8f9b61c4644c9fa files/au
 DIST autoconf-2.13.tar.gz 443844 RMD160 0d1fa0992280ed71c0d72487a5a4c246d1c1b18a SHA1 e4826c8bd85325067818f19b2b2ad2b625da66fc SHA256 f0611136bee505811e9ca11ca7ac188ef5323a8e2ef19cffd3edb3cf08fd791e
 DIST autoconf-2.59.tar.bz2 925073 RMD160 792c45aade68e2ed19a0e4c6ebc0e20cb8298e1a SHA1 d366a07b2d99c95b7f24395aa8a8e023d8b93b69 SHA256 f0cde70a8f135098a6a3e85869f2e1cc3f141beea766fa3d6636e086cd8b90a7
 DIST autoconf-2.60.tar.gz 1366620 RMD160 0245d3a347b6be4f87f9f820f2dc43664327ec43 SHA1 4286f873d04ba0d06fd9439fee9a1a8bd7bda91d SHA256 0bef75d70afff289d0e1fe378d6aa1d79b3032cb4caf484578ac2a8a0530a3af
-EBUILD autoconf-2.13.ebuild 1550 RMD160 c7744338042f2ac44be9f77ff2f8132c9157143b SHA1 821e19703fb8f6be354cb06985f4553e13819151 SHA256 3271d03192699a8c2077f342a65d9b56e5ce5c1d4df844e5f57ea4cad620003e
-MD5 f6593f5445e8c1aec9caff15a3ae3014 autoconf-2.13.ebuild 1550
-RMD160 c7744338042f2ac44be9f77ff2f8132c9157143b autoconf-2.13.ebuild 1550
-SHA256 3271d03192699a8c2077f342a65d9b56e5ce5c1d4df844e5f57ea4cad620003e autoconf-2.13.ebuild 1550
-EBUILD autoconf-2.59-r7.ebuild 1230 RMD160 94335f9fc6cd65b786593966a209088847ab952e SHA1 3e1bb6bf1a1e68ca8ed4c663fd68a07622b179c1 SHA256 4ce47c579104a127310f293359727b4d6ef66660abc7c1b96dad692124e32d59
-MD5 bdd4c43b3135d3c1b17b42b87369e57a autoconf-2.59-r7.ebuild 1230
-RMD160 94335f9fc6cd65b786593966a209088847ab952e autoconf-2.59-r7.ebuild 1230
-SHA256 4ce47c579104a127310f293359727b4d6ef66660abc7c1b96dad692124e32d59 autoconf-2.59-r7.ebuild 1230
-EBUILD autoconf-2.60.ebuild 1380 RMD160 3d2616b94fef960fc60fd5796533ac678cb37cda SHA1 f7af022aa08c923c43f43f700a4118462c27ef67 SHA256 5cae286c98628c3235309e2695c998fd1603cabf496e58507d6ba9f2348b7871
-MD5 62a88535e39f19a9b0758e8fb7b03158 autoconf-2.60.ebuild 1380
-RMD160 3d2616b94fef960fc60fd5796533ac678cb37cda autoconf-2.60.ebuild 1380
-SHA256 5cae286c98628c3235309e2695c998fd1603cabf496e58507d6ba9f2348b7871 autoconf-2.60.ebuild 1380
-MISC ChangeLog 11828 RMD160 4ec7ecc40de99aa48a55bcc1240d4b4f7b5e74b1 SHA1 7c1ccc325c9abcd35c1590e4f12663356d04cf75 SHA256 c861b16b5377df32e262709a81b060c000ad27b92623e13508cdb7c7addc21d1
-MD5 56d188ba20af4dd3e38f2739dd1a2284 ChangeLog 11828
-RMD160 4ec7ecc40de99aa48a55bcc1240d4b4f7b5e74b1 ChangeLog 11828
-SHA256 c861b16b5377df32e262709a81b060c000ad27b92623e13508cdb7c7addc21d1 ChangeLog 11828
+EBUILD autoconf-2.13.ebuild 1549 RMD160 f81a49136fba7311b0b0c0d904b4864f01e17bb3 SHA1 312f0791b7f55ac6f4e2bae7c1a86d0f84e61654 SHA256 7a13f99451f3c0626202835705960094ae68207e108c7f0c534099a2d78f23ae
+MD5 37827d5b7bcd6bd8ffa381b18a36dc18 autoconf-2.13.ebuild 1549
+RMD160 f81a49136fba7311b0b0c0d904b4864f01e17bb3 autoconf-2.13.ebuild 1549
+SHA256 7a13f99451f3c0626202835705960094ae68207e108c7f0c534099a2d78f23ae autoconf-2.13.ebuild 1549
+EBUILD autoconf-2.59-r7.ebuild 1229 RMD160 38c93168c94f1922ccaad99093399aee2632bd47 SHA1 6d8b60dbd531f06b72ac114f486c9cbc28a95430 SHA256 db28cb4201fea569bba0df83d4f1e00ec26a50df1e6ab74480dcac9ae18ae5b7
+MD5 7a4406b4f0585d482462d12ec9f09bd4 autoconf-2.59-r7.ebuild 1229
+RMD160 38c93168c94f1922ccaad99093399aee2632bd47 autoconf-2.59-r7.ebuild 1229
+SHA256 db28cb4201fea569bba0df83d4f1e00ec26a50df1e6ab74480dcac9ae18ae5b7 autoconf-2.59-r7.ebuild 1229
+EBUILD autoconf-2.60.ebuild 1382 RMD160 d07eb9e7c5157d125575510e1a794e39c02202a3 SHA1 a82d798d3fcadee298d3bc9c6ae44e00ca22c314 SHA256 1651392ed6283fd57d7ecc85e69cab7ea47e3aad9cdab3843fd2f8ff906559fb
+MD5 14a4e7bde0d97535c14b06b5676571fb autoconf-2.60.ebuild 1382
+RMD160 d07eb9e7c5157d125575510e1a794e39c02202a3 autoconf-2.60.ebuild 1382
+SHA256 1651392ed6283fd57d7ecc85e69cab7ea47e3aad9cdab3843fd2f8ff906559fb autoconf-2.60.ebuild 1382
+MISC ChangeLog 12059 RMD160 041874fadebb46594e261a9e1918b01fd4f7b94c SHA1 8d775a77e50881152b2e1e9a4d030616a1875434 SHA256 ef10de06d357d3da1835c6c7ccacac9b69aaa7fe277695854d44b8fb930420a5
+MD5 14af6f8747b604fda59f9135052cd54d ChangeLog 12059
+RMD160 041874fadebb46594e261a9e1918b01fd4f7b94c ChangeLog 12059
+SHA256 ef10de06d357d3da1835c6c7ccacac9b69aaa7fe277695854d44b8fb930420a5 ChangeLog 12059
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
